Opened 12 years ago
Closed 12 years ago
#7283 closed bug (fixed)
ProcessController – Process priorities are not localized
Reported by: | deejam | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ProcessController | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Process priorities in ProcessController are not localized. See attached image.
GCC2 Hybrid. hrev40624.
Attachments (1)
Change History (6)
by , 12 years ago
Attachment: | ProcessController_priority.png added |
---|
follow-up: 2 comment:1 by , 12 years ago
These menu items too needs to be localized:
Processor 1 Processor 2
comment:2 by , 12 years ago
Replying to phoudoin:
These menu items too needs to be localized:
Processor 1 Processor 2
I think they are localized already. There's a string for it in HTA. Processor is the same in Swedish (the language in the image) as in English.
comment:3 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
as per phoudoin, fixed in hrev40691.
comment:4 by , 12 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Could you please improve your localization in the following way: replace current "% prority [%d]" mask with set of masks for different priorities written in full-name manner. Something that looks like "Low priority [%d]", "Real-time priority [%d]" etc.
The problem, that we have in translation them to Russian and other similar languages is that sometime it is not possible to formulate those lines grammatically perfect with strict "%s priority [%d]" mask. Sometime the name of priority should go before the "priority" word but sometime after it. The workaround I see is to let the translator work with complete "priority name" sentence. Is it possible?
I'll reopen this ticket for now.
comment:5 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
It is finally fixed, AFAIK.
ProcessController process priority