Localized priority submenu. Closes #7283.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40691 a95241bf-73f2-0310-859d-f6bbb57e9c96